Se arreglo el slider,boton extra y eliminacion de margenes y padding del mismo

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -4,11 +4,7 @@
   "exportConfig": true,
   "fileConfigs": [],
   "fileTree": {
-    "expandedDirs": [
-      "scss",
-      "css",
-      "pug"
-    ],
+    "expandedDirs": [],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
@@ -26,6 +22,7 @@
       "path": "index.pug",
       "imports": [
         "pug/header.pug",
+        "pug/slider.pug",
         "parrafos.pug"
       ]
     }
